Completed basic first page
- Handled infinite scroll by adding scroll listener on recyclerview
- Handled entered text search on editext
- hide keyboard use press done key in the keyboard, clear the data from adapter
- Added error layout
- Added util class to add util functions like hiding keyboard and all

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Pixabay</string>
+    <string name="search_hint_text">search any images</string>
+    <string name="loading_more_content">loading…</string>
+    <string name="result_query_text">showing result for %1$s</string>
+    <string name="something_went_wrong">Something went wrong…</string>
+    <string name="retry">Retry</string>
 </resources>
