Complete basic flow
- Added few helpful asset like for comments, downloads, likes
- Added alert dialog to ask user if they want to see more details
- Updated image size, preview to 120dp and expanded to 300dp

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="result_query_text">showing result for %1$s</string>
     <string name="something_went_wrong">Something went wrong…</string>
     <string name="retry">Retry</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="see_more_detail">Do you want to see more details about this?</string>
 </resources>
